--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="theme">
   <div class="page">
     <header class="header">
-      <img src="./images/header-logo.svg" alt="Россия">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
       <ul class="header__link-cover">
         <li class="header__lang-link">
           <a class="header__lang-link-text header__lang-link-text_active"  href="#">Ru</a>
